Fixed bug with z-index - parallax, put planets behing featureScroll

--- a/src/styles/featureScroll.scss
+++ b/src/styles/featureScroll.scss
@@ -1,4 +1,6 @@
 .featureScroll{
+    position:relative;
+    z-index: 5000;
     padding:30px;
     
     .featureWrapper{
