--- a/src/styles/parallax.scss
+++ b/src/styles/parallax.scss
@@ -6,7 +6,6 @@
     -o-background-size: cover;
     background-size: cover;
     overflow:hidden;
-    z-index:-1;
     .topParallaxWrapper{
         background-color:rgba(0, 0, 0, 1);
         opacity:0;
@@ -22,7 +21,7 @@
         position:relative;
 
         .innerParallax{
-            //transition: scale 0.01s;
+            transition: transform 0.1s ease-out;
             height:calc(100vh - 70px);
             //position:fixed;
         }
@@ -61,6 +60,7 @@
 #bottom_parallax{
     margin-top:-10px;
     background:#f2f2f2;
-    z-index:1000;
+    z-index:4000;
     position:relative;
+
 }
