--- a/src/styles/planets.scss
+++ b/src/styles/planets.scss
@@ -1,6 +1,7 @@
 @import "shared.scss";
 
 .planets {
+    z-index: 4000;
     position: absolute;
     .redPlanet {
         img {
